--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title></title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, minimum-scale=1">
     <link href="./scss/css/styles.css" rel="stylesheet" as='stylesheet' onload="this.rel='stylesheet'">
 </head>
 
